# cts-admin-server

./: .env  .gitignore  Cargo.toml  README.md  aa.json  config.toml
common/: Cargo.toml
common/src/: config.rs  date_time_format.rs  date_time_format_option.rs  db.rs  error.rs  lib.rs  md5.rs
common/src/auth/: jwt.rs
common/src/db/: db_type.rs  form.rs  select.rs
common/src/file/: csv.rs
entity/: Cargo.toml
entity/src/: form_template.rs  lib.rs  prelude.rs  project.rs  sys_api.rs  sys_menu.rs  sys_role.rs  sys_role_api.rs  sys_role_menu.rs  sys_tenant.rs  sys_user.rs
middleware/: Cargo.toml
middleware/src/layers/: auth_layer.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240607_130840_init_database.rs
migration/src/manager/: mod.rs
migration/src/manager/cts/: form_template.rs  project.rs
migration/src/manager/sys/: mod.rs  sys_api.rs  sys_menu.rs  sys_role.rs  sys_role_api.rs  sys_role_menu.rs  sys_tenant.rs  sys_user.rs
migration/src/sys/: mod.rs  sys_api.rs  sys_menu.rs  sys_role.rs  sys_role_menu.rs  sys_tenant.rs  sys_user.rs
models/: Cargo.toml
models/src/: lib.rs
models/src/dto/: mod.rs
models/src/dto/cts/request/: form.rs  form_template.rs  project.rs  task.rs
models/src/dto/cts/response/: form_template.rs  mod.rs  project.rs
models/src/dto/sys/: mod.rs  request_sys_user.rs  sys_user.rs
models/src/dto/sys/request/: base.rs  mod.rs  sys_api.rs  sys_menu.rs  sys_permission.rs  sys_role.rs  sys_tenant.rs  sys_user.rs
models/src/dto/sys/response/: base.rs  mod.rs  sys_api.rs  sys_menu.rs  sys_role.rs  sys_tenant.rs  sys_user.rs
models/src/sys/: sys_user.rs
project-form/: Cargo.toml
project-form/src/: file_util.rs  lib.rs
project-form/src/convert/: mod.rs
project-form/src/form/: form_json.rs  form_util.rs  mod.rs  question.rs  validation.rs
project-form/src/project/: mod.rs
project-form/src/request/: cts_multipart.rs  mod.rs
web/: Cargo.toml
web/src/: lib.rs  main.rs
web/src/dao/sys/: mod.rs  sys_user.rs
web/src/handler/: mod.rs
web/src/handler/base/: login_logout.rs  mod.rs  upload_download.rs
web/src/handler/cts/: form.rs  form_template.rs  mod.rs  project.rs  task.rs
web/src/handler/sys/: mod.rs  sys_api.rs  sys_menu.rs  sys_permission.rs  sys_role.rs  sys_table.rs  sys_tenant.rs  sys_user.rs
web/src/log/: mod.rs
web/src/route/: mod.rs
web/src/route/base/: login_logout.rs  mod.rs  upload_download.rs
web/src/route/cst/: form.rs  form_template.rs  mod.rs  project.rs  task.rs
web/src/route/sys/: mod.rs  sys_api.rs  sys_domain.rs  sys_menu.rs  sys_permission.rs  sys_role.rs  sys_table.rs  sys_tenant.rs  sys_user.rs  upload_download.rs
web/src/server/: log.rs  mod.rs
web/src/service/: mod.rs
web/src/service/base/: login_logout.rs  mod.rs  upload_download.rs
web/src/service/cts/: form.rs  form_template.rs  mod.rs  project.rs  task.rs
web/src/service/sys/: mod.rs  sys_api.rs  sys_menu.rs  sys_permission.rs  sys_role.rs  sys_table.rs  sys_tenant.rs  sys_user.rs
web/tests/: string.rs
