[workspace]
resolver = "2"
members = ["common", "models", "utils", "web", "migration", "entity", "middleware"]

[workspace.package]
authors = ["tanghy <tanghy@cloudthink.space>"]
homepage = "https://www.cloudthink.space"
publish = false
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/maplibre/martin"
rust-version = "1.77.2"
readme = "README.md"

[workspace.dependencies]
# 内部模块
common = { path = "./common", version = "0.1.0" }
models = { path = "./models", version = "0.1.0" }
utils = { path = "./utils", version = "0.1.0" }
migration = { path = "./migration", version = "0.1.0" }
entity = { path = "./entity", version = "0.1.0" }
web = { path = "./web", version = "0.1.0" }
middleware = {path ="./middleware", version = "0.1.0"}

# 外部依赖
# web框架
axum = "0.7.5"
tokio = "1.37.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
time = "0.3.36"
tower = "0.4.13"
sea-orm = "0.12.15"
sea-orm-migration = "1.0.0-rc.5"
response_utils= { git = "https://github.com/CloudThinkSpace/cts-base", package = "response_utils", version = "0.1.1"}
toml = "0.8.14"
serde = "1.0.203"
chrono = "0.4.38"
rust-crypto = "0.2.36"
uuid = "1.8.0"
jsonwebtoken = "9.3.0"
thiserror = "1.0.61"
anyhow = "1.0.86"
async-recursion = "1.1.1"
