[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
toml.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
tokio = { workspace = true, features = ["sync"] }
rust-crypto.workspace = true
tracing.workspace = true
jsonwebtoken.workspace = true
chrono.workspace = true