[package]
name = "middleware"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
publish.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme.workspace = true

[dependencies]
axum.workspace = true
common.workspace = true
models.workspace = true
