[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
sea-orm.workspace = true
common.workspace = true
chrono.workspace = true
async-std = { version = "1", features = ["attributes", "tokio1"] }
uuid = { version = "1.8.0", features = ["v4"] }

[dependencies.sea-orm-migration]
version = "0.12.0"
features = [
   "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
   "sqlx-postgres",         # `DATABASE_DRIVER` feature
]
