[package]
name = "web"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dependencies]
entity.workspace = true
common.workspace = true
models.workspace = true
axum.workspace = true
tokio = { workspace = true, features = ["full"] }
tower.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true }
response_utils.workspace = true
sea-orm = { workspace = true, features = ["macros", "sqlx-postgres", "runtime-tokio-rustls"] }
chrono.workspace = true
uuid = { workspace = true, features = ["v4"] }
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
log = "0.4.21"